--- a/resin9129.html
+++ b/resin9129.html
@@ -6,7 +6,15 @@
 </head>
   <body>
   <h1><a href="index.html">WEB</h1>
-    <ol>
+    <input type+"button" value+"night" onclick+"
+    document.querySelector('body').style.backgroundColor ='black';
+    document.querySelector('body').style.clolor='white';
+    ">
+    <input type="button" value="day" onclick="
+    document.querySelector('body').style.backgroundColor='white';
+    document.querySelector('body').style.color='black';
+    ">
+<ol>
   <li>.<a href="1.html">HTML</li>
   <li>.<a href="2.html">CSS</li>
   <li>.<a href="3.html">JavaScript</li><br>
