--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</h1>
+    <input type+"button" value+"night" onclick+"
+    document.querySelector('body').style.backgroundColor ='black';
+    document.querySelector('body').style.clolor='white';
+    ">
+    <input type="button" value="day" onclick="
+    document.querySelector('body').style.backgroundColor='white';
+    document.querySelector('body').style.color='black';
+    ">
 <ol>
   <li>.<a href="1.html">HTML</li>
   <li>.<a href="2.html">CSS</li>
