--- a/2.html
+++ b/2.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</h1>
-    <input type="button" value+"night" onclick="
+    <input type="button" value="night" onclick="
     document.querySelector('body').style.backgroundColor ='black';
     document.querySelector('body').style.clolor='white';
     ">
